--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="blue">
 
-  Capture and Share the World's Moments
+  </div>
+  <div class="content">
+    <div class="image">
+      <img src="images/phones.png" alt="phones" class="mobile">
+    </div>
+    <div class="sub_section">
+      <div class="title">
+          <img src="images/brand.png" alt="Instagram">
+          <span class="btn">
+            <img src="images/home.png" alt="home">
+            <strong>Log In</strong>
+          </span>
+      </div>
+      <div class="information">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br>
+          Oh yeah, did we mention it's free?
+        </p>
+        <a href="#"> <img src="images/badge-iphone.png" alt="Download on the App Store" class="appstore"></a>
+        <a href="#"> <img src="images/badge-android.png" alt="Get it on Google Play" class="googleplay"></a>
+      </div>
+    </div>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer class="footer">
+      <ul>
+        <li><strong>About Us</strong></li>
+        <li><strong>Support</strong></li>
+        <li><strong>Blog</strong></li>
+        <li><strong>Press</strong></li>
+        <li><strong>API</strong></li>
+        <li><strong>Jobs</strong></li>
+        <li><strong>Privacy</strong></li>
+        <li><strong>Terms</strong></li>
+        <li><strong class="copy">&copy; 2014 Instagram</strong></li>
+      </ul>
+    </footer>
 </body>
 </html>
