Instagram Clone finished

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link href="CSS/main.css" rel="stylesheet" type="text/css">
 <head>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="father">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <img src="images/brand.png" alt="Inst logo" class="head-logo">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="log">
+      <button type="submit"><img src="images/home.png" alt="home button">Login</button>
+    </div>  
 
-  Oh yeah, did we mention it's free?
+    <section id="text-frame">
+    <article>
+    
+      <h2>Capture and Share<br> the World's Moments</h2>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <p calss="section-text">Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br><br>
 
-  &copy; 2014 Instagram
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+
+        Oh yeah, did we mention it's free?</p>
+
+      <a href="android"><img src="images/badge-android.png" alt="Android badge" class="brands"></a>
+
+      <a href="iphone"><img src="images/badge-iphone.png" alt="Iphone badge" class="brands"></a>
+
+    </article>
+    </section>
+</div>
+
+
+<img src="images/phones.png" alt="phones image" class="phones"> 
+
+
+<div class="son">
+  
+  <ul class="bottom-links">
+    <li class="bar-li"><a href="#">About Us</a></li>
+    <li class="bar-li"><a href="#">Support</a></li>
+    <li class="bar-li"><a href="#">Blog</a></li>
+    <li class="bar-li"><a href="#">Press</a></li>
+    <li class="bar-li"><a href="#">API</a></li>
+    <li class="bar-li"><a href="#">Jobs</a></li>
+    <li class="bar-li"><a href="#">Privacy</a></li>
+    <li class="bar-li"><a href="#">Terms</a></li>
+    <li class="copy bar-li">&copy; 2014 Instagram</li>
+  </ul>
+</div>  
+
 </body>
 </html>
