--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <meta name="description" content="Ironhack curso">
+  <meta name="keywords" content="curso, ironhack, css">
+  <meta name="author" content="Pecas">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--  typografia -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500" rel="stylesheet">
+  <!--  css main -->
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+<div class="div-blue"></div>
 
-  Capture and Share the World's Moments
+<div id="Instagram">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="container">
+    <div class="col-50">
+      <div class="img-celphone"><img src="images/phones.png"/></div>
+    </div>
+    <div class="col-50">
+      <div class="img-brand">
+        <img class="f-left" src="images/brand.png"/>
+        <button class="f-left button-login"><img class="f-left" src="images/home.png"/><span class="text-button">Log In</span> </button>
+      </div>
+      <div class="text-bg">
+        <h1>Capture and Share <br> the World's Moments</h1>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+          Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+        <img src="images/badge-iphone.png"/> <img class="btn-android" src="images/badge-android.png"/>
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    </div>
 
-  &copy; 2014 Instagram
+  </div>
+
+</div>
+
+
+<footer>
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+  </ul>
+  <span class="copyright">&copy; 2014 Instagram</span>
+</footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
+
