--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+    <meta charset ="UTF-8">
+    <link rel="stylesheet" href="css/main.css">
+  <title> 
+  Instagram  
+  </title>
 </head>
 <body>
-  Instagram
+  <header> <img src="./images/brand.png" alt="Instagram">
+    <button> <img src="./images/home.png" alt="home"> Log in  </button>
+    </header>
+  
+<div id = "caja1"> <img src="./images/phones.png" alt="phones"> </div>
+<div id = "caja2">
 
-  Capture and Share the World's Moments
+  <div class="frase">Capture and Share the World's Moments</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class ="texto">Instagram is a <b>fast, beautiful</b> and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+  <img src="./images/badge-iphone.png" alt="Download on the App Store">
+  <img src="./images/badge-android.png" alt="Get it on Google Play">
+</div>
+<div class ="pie">
+<table >
+  <tr>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <td><a href="#about">About Us</a></td>
+  <td><a href="#support">Support</a></td>
+  <td><a href="#blog">Blog</a></td>
+  <td><a href="#press">Press</a></td>
+  <td><a href="#api">API</a></td>
+  <td><a href="#jobs">Jobs</a></td>
+  <td><a href="#privacy">Privacy</a></td>
+  <td><a href="#terms">Terms</a></td>
 
-  &copy; 2014 Instagram
+  <td>&copy; 2014 Instagram</td>
+  </tr>
+</table>
+</div>
 </body>
 </html>
