--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,56 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <!-- Instagram -->
+  <div class="top--blue">
+  </div>
+  <div class="floating">
+    <div class="floating--left">
+      <img class = "phone" src="images/phones.png" alt="Image of phone">
+    </div>
+    <div class="floating--right">
+      <div class="logos">
+        <img class="logo" src="images/brand.png" alt="Instagram logo">
+        <!-- Login button -->
+        <button class="btn-login">
+          <img class="login" src="images/home.png" alt="Log in"> <span>Log in</span>
+        </button>
+      </div>
+      <div class="text--framed">
+        <h1 class="header--blue">Capture and Share the World's Moments</h1>
+        <p>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+        </p> 
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+      </div>
+      <img class="badge badge-iphone" src="images/badge-iphone.png" alt="Get it on Apple Store">
+      <img class="badge badge-android" src="images/badge-android.png" alt="Get it on Google Play">
+    </div>
+    
+  </div>
+  <div class="clearfix"></div>
+  <!-- <div class="bottom">
+  </div> -->
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li><span class="copyright">&copy; 2014 Instagram</span></li>
+    </ul>
+  </footer>
 </body>
 </html>
