Lab Instagram PR

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="/Users/LeFinancier/code/Semana1/Sabado/lab-css-instagram-clone/starter-code/css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="upper">
+      <img src="/Users/LeFinancier/code/Semana1/Sabado/lab-css-instagram-clone/starter-code/images/brand.png" alt="Instagram" class="middle">
+    <section class="title">
+        <a href="#" target="_blank" class="login"> 
+          <img src="/Users/LeFinancier/code/Semana1/Sabado/lab-css-instagram-clone/starter-code/images/home.png" alt="home" class="home"><b>Log in</b></a>
+      </section>
+    
+  </div>
+  <div>
+    <div class="iphone">
+        <img src="/Users/LeFinancier/code/Semana1/Sabado/lab-css-instagram-clone/starter-code/images/phones.png" alt="Phone" class="phones">
+    </div>
+    <div class="position">
+    <section class="texto">
+      <h3>Capture and Share <br> the World's Moments</h3>
+      <p>  Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family. <br>
+        <br>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the <br>
+        <br>
+        Oh yeah, did we mention it's free?</p>
 
-  Capture and Share the World's Moments
+        <a href="#" target="_blank"> 
+          <img src="/Users/LeFinancier/code/Semana1/Sabado/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="apple" class="badges-app"></a>
+        <a href="#" target="_blank">
+          <img src="/Users/LeFinancier/code/Semana1/Sabado/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="goolge" class="badges-goo"></a>
+    </section>
+    </div>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="center">
+  <footer class="footer">
+    <ul class="list">
+      <li>About Us</li>
+      <li>Support</li>
+      <li class="api">Blog</li>
+      <li class="press">Press</li>
+      <li class="api">API</li>
+      <li class="api">Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="insta">&copy2014 Instagram</li>
+    </ul>
+  </footer>
+  </div>
 </body>
 </html>
