--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class = "fondo-azul"></div>
+  <div class = "fondo-blanco">
+  <div class ="contenedor"><img src="images/phones.png" alt="phones">
+  
+ <img src="images/brand.png" class="img-insta" >
 
-  Capture and Share the World's Moments
+ <div class="login"><img src="images/home.png" class= "boton-log"> LOG IN
+ 
+</div>
+  <div class= "text"><p id="encabezado"> Capture and Share<br> the World's Moments</p><br><br>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p><br><br>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br><br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free?<br>  
 
-  Download on the App Store
-  Get it on Google Play
+  <img class="downloadapple" src="images/badge-iphone.png" alt="iphone">
+  <img class="download" src="images/badge-android.png" alt="badge-android">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+</p>
+</div>
+  
 
+  
+  
+    </div>
+  </div>
+  <footer class="footer">
+  <a href="#">About Us</a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="#">API</a>
+  <a href="#">Jobs</a>
+  <a href="#">Privacy</a>
+  <a href="#">Terms</a>
   &copy; 2014 Instagram
+</footer>
 </body>
 </html>
