not done-want to go back with flexbox

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,44 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div class = "blue-background">
+  </div>
+<div class = "phones">
+    <img src="./images/phones.png" alt="Iphone sample of Instagram">
+</div>
+<div class = "logo">
+    <img src="./images/brand.png" alt="Instgram Logo">
+</div>
+<div class = "login">
+    <img src="./images/home.png"Log in alt="Login Button">
+</div>
+<div class="white-background">
+  <h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
+  <p>Oh yeah, did we mention it's free?</p>
+  <div>
+  <img src="./images/badge-iphone.png" alt="Apple Store Button">
+  <img src="./images/badge-android.png" alt="Google Play Button">
+  </div>
+</div>
+<div> 
+  <a href="#"> About Us</a>
+  <a href="#">Support</a>
+  <a href="#">Blog</a>
+  <a href="#">Press</a>
+  <a href="#">API</a>
+  <a href="#">Jobs</a>
+  <a href="#">Privacy</a>
+  <a href="#">Terms</a>
   &copy; 2014 Instagram
+</div>
+  
 </body>
 </html>
