--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div>
+   <img src="./images/phones.png" alt="phone" class="phoneimg"/>
+  </div>
+    
+  <section>
+  
+  <div class="brand">
+    <img src="./images/brand.png" alt="instagram logo" class="instagram-logo"/>
+    <button type="button"><img src="./images/home.png"/>Log in</button>
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="text">
+    <h1>Capture and Share the World's Moments</h1>
+    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+  </div>  
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="logo">
+  <img src="./images/badge-iphone.png" alt="Download on the App Store"/>
+  <img src="./images/badge-android.png" alt="Get it on Google Play"/>
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </section>
 
-  Oh yeah, did we mention it's free?
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="copyright">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  
 </body>
 </html>
