--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <link href="./css/main.css" rel="stylesheet" type="text/css" />
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="blue-container">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="white-container">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="main-content">
 
-  Oh yeah, did we mention it's free?
+    <div class="mobile-img-content">
+      <img alt="mobile" src="./images/phones.png"/>
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="info-content">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <div class="header-content">
+          
+        <h1 class="logo">
+          <img alt="brand" src="./images/brand.png"/>
+        </h1>
 
-  &copy; 2014 Instagram
+        <button class="log-in"><img alt="home" src="./images/home.png">Log in</button>
+
+      </div>
+
+      <div class="text-content">
+
+        <h2>Capture and Share the World's Moments</h2>
+
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+      
+
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.  
+        Oh yeah, did we mention it's free?</p>
+
+      </div>
+
+      <div class="app-content">
+
+        <img alt="app-store" src="./images/badge-iphone.png"/>
+        <img alt="google-play" src="./images/badge-android.png"/>
+
+      </div>
+
+    </div>
+
+  </div>
+
+  <div class="nav-container">
+  
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+
+    <span>&copy; 2014 Instagram</span>
+
+  </div>
+
 </body>
+
 </html>
