--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="container">
+    <aside class="leftColumn">
+      <img style="position: relative; float: right; padding-right: 50px;" src=" ./images/phones.png" alt="">
+    </aside>
+    <aside class="rightColumn">
+      <section class="absolute">
+        <img src="./images/brand.png" style="width: 250px;" alt="">
+        <div class="nose">
+          <img src="./images/home.png">
+          <span>Log In</span>
+        </div>
+      </section>
+      <div class="rightBox">
+        <h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+        Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your
+        life with friends and family. <br><br>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+        that
+        easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world <br><br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        Oh yeah, did we mention it's free? <br> <br>
+        <img src="./images/badge-iphone.png" class="logos" alt="">
+        <img src="./images/badge-android.png" class="logos" alt="">
+      </div>
+    </aside>
+  </div>
+  <ul class="lista">
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li>&copy; 2014 Instagram</li>
+  </ul>
 </body>
+
 </html>
