--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <section class="blue-bk"></section>
+  <section class="section-container">
+    <section class="left-section">
+      <img id="phone-img" src="images/phones.png" alt="phone">
+    </section>
+    <section class="right-section">
+      <img id="logo" src="images/brand.png" alt="Instagram">
+      <button id="home-btn">Log in</button>
+      <article class="info">
+        <h3>Capture and Share the World's Moments</h3>
+        <p>
+          Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+        <img src="images/badge-iphone.png" alt="App Store">
+        <img src="images/badge-android.png" alt="Google Play">
+      </article>
+    </section>
+    <div class="clearfix"></div>
+  </section>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <div class="foot-div">
+      <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li id="copy-right" >&copy; 2014 Instagram</li>
+        </ul>
+        <!-- &copy; 2014 Instagram -->
+    </div>
+  </footer>
 </body>
 </html>
