--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <header>
+    <div class="logo">
+      <img src="images/brand.png" />
+      <button class="boton">
+        <img src="images/home.png">
+        <span>Log in</span>
+      </button>
+    </div>
+  </header>
+  <section id="image">
+    <img src="images/phones.png">
+  </section>
+  <section id="description">
+    <article class="texto">
+      <h1>Capture and Share the World's Moments</h1>
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family. </p> 
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to
+      Instagram it's that easy. You can even share to Facebook, Twitter, Tumblr and more.
+      It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+    </article>
+    <article class="logos">
+      <img src="images/badge-iphone.png" />
+      <img src="images/badge-android.png" />
+    </article>
+  </section>
+  <section id="footer">
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="copy">&copy; 2014 Instagram</li>
+    </ul>
+  </section>
 </body>
 </html>
