--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,39 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
-  Instagram
+  <div id="azul"></div>
+  <section id="hueso">
+    <div id="contenido">
+      <div id="imagen"></div>
+      
+      <article id="texto"><div id="header"><img src="images/brand.png">
+        <a href="#" class="boton "> <img src="images/home.png" alt="home">Login</a>
+      </div><div id="parrafo"><h1>Capture and Share the World's Moments</h1><p>Instagram is a <strong>fast, beautiful and fun</strong> way to share your life with friends and family.
 
-  Capture and Share the World's Moments
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        
+          Oh yeah, did we mention it's free?</p>
+        <img id= "iphone" src="images/badge-iphone.png" alt="iphone"> <img id="android" src="images/badge-android.png">
+        </div></article>
+      <footer>
+        <ul class="lista">
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>&copy; 2014 Instagram</li>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        </ul>
+      </footer>
+    </div>
+  </section> 
 </body>
 </html>
