--- a/starter-code/TMPSZYCS5.htm
+++ b/starter-code/TMPSZYCS5.htm
@@ -8,17 +8,16 @@
  
 <section id="frame1">
 	<ul class="main-box">
-	<li><img id="logo" src="images/brand.png" alt=""></li>
+	<li><img src="images/brand.png" alt=""></li>
 	<li><img src="images/home.png" alt=""></li>
 	</ul>
 </section> 
   
   	<img id="phones" src="images/phones.png" alt="">
   	
-  <section id="frame2"> 
-  <br>	
+  <section id="frame2"> 	
   <h3>Capture and Share the World's Moments</h3>
-  <br>
+
   <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
@@ -32,19 +31,19 @@
   
   </ul>
   </section> 
-	<footer>
-	<ul id="foot">
-  <li><strong>About Us</strong></li>
-  <li><strong>Support</strong></li>
-  <li><strong>Blog</strong></li>
-  <li><strong>Press</strong></li>
-  <li><strong>API</strong></li>
-  <li><strong>Jobs</strong></li>
-  <li><strong>Privacy</strong></li>
-  <li><strong>Terms</strong></li>
-  <li id="right">&copy; 2014 Instagram</li>
-   </ul>
-	</footer>
-  
+
+  Download on the App Store
+  Get it on Google Play
+
+  About Us
+  Support
+  Blog
+  Press
+  API
+  Jobs
+  Privacy
+  Terms
+
+  &copy; 2014 Instagram
 </body>
 </html>
