DE-MEX Miguel Gomez

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+<section>
+  <div id="blueBckg">
+  </div>
+</section>
+<section id="mainSection">
+  <img class="floatLeft" src="images/phones.png" alt="">
+  <div class="floatRight">
+    <div class="verticalMid">
+      <img class="inline" src="images/brand.png" alt="">
+      <section class="inline" id="lastCheatByOmar">
+        <button class="btnCheat">
+          <img src="images/home.png" alt="">
+          <span id="paddingButton"> Log in </span>
+        </button>
+      </section>
+    </div>
+    <div id="whiteBckg">
+      <p>
+      <h2 id="title">Capture and Share the World's Moments</h2>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Capture and Share the World's Moments
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <p>Oh yeah, did we mention it's free?</p>
+      </p>
+    </div>
+    <div id="padddingButtons">
+      <img src="images/badge-iphone.png" alt="">
+      <img id="littlePadding" src="images/badge-android.png" alt="">
+    </div>
+    <img src="" alt="">
+  </div>
+</section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<footer class="fixBottom">
+  <a href="">About Us</a>
+  <a href="">Support</a>
+  <a href="">Blog</a>
+  <a href="">Press</a>
+  <a href="">API</a>
+  <a href="">Jobs</a>
+  <a href="">Privacy</a>
+  <a href="">Terms</a>
+  <span>&copy; 2014 Instagram --></span>
+</footer>
 
-  Oh yeah, did we mention it's free?
+<!--
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
 </body>
 </html>
