--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <title>Instagram</title>
 <head>
-  <title>Instagram</title>
+  
 </head>
 <body>
-  Instagram
+  
 
-  Capture and Share the World's Moments
+  <section id="contenedor"></section>
+  <article id="TOP">
+  <div class="telefonos"><img src="images/phones.png" alt="Celular" ></div> 
+</section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<article>
+<div id="recuadro" style="width:fit-content">
+        
+  <h2>Capture and Share <br>the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <P> Instagram is a <strong>fast, beautiful </strong>and <strong>fun</strong> way to share your life<br> with friends and family.<br>
+        
+         Take a picture or video,
+           choose a filter to transform its look <br>and feel, 
+          then post to Instagram &mdash; 
+          it's that easy. You can <br>even share to 
+          Facebook, Twitter, Tumblr and more. 
+          It's a <br>new way to see the world.
+        <br>
+        <br>
+          Oh yeah, did we mention it's free?</P>
 
-  Oh yeah, did we mention it's free?
+          <img id="iphone" src="../starter-code/images/badge-iphone.png">
+          <img id="android" src="../starter-code/images/badge-android.png">
 
-  Download on the App Store
-  Get it on Google Play
+      </article>
+  
+  
+  
+</div>
+<section id="logo" >
+<div class="logo"><img src="images/brand.png"alt="logo">  </div><button type="button"><img src="../starter-code/images/home.png">Log in</button></section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+</article>
 
-  &copy; 2014 Instagram
+ <section id="bottom"> 
+    <ul><strong>
+        <li>About Us </li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li></strong>
+        </ul>
+
+  
+ 
+
+  </section>
 </body>
 </html>
