MEX-DE MONTSE ORTIZ

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" type="text/css" href="./css/main.css">
+<meta charset="UTF-8">
 <head>
   <title>Instagram</title>
 </head>
+
+
+
 <body>
-  Instagram
+  <div class = "instagram">
+    <img src="./images/brand.png" alt="Instagram">
+    <div>
+        <button>
+            <img src="images/home.png" alt="Home"/>
+           <span>Log in</span> 
+        </button>  
+    </div>
+  </div>
+ 
+  
+  <div class="telefonos"> 
+    <img src="./images/phones.png" alt="Iphone">
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="texto" style="background-image: url(./images/frame.png);width: 600px; height: 300px;">
+    <h1>Capture and Share the World's Moments</h1>
+    <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way 
+        to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to 
+        transform its look and feel, then post to Instagram &mdash; it's that easy. 
+        You can even share to Facebook, Twitter, Tumblr and more. 
+        It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p> <br>
+    <div>  
+      <img src="./images/badge-iphone.png" alt="Download on the App Store">
+      <img src="./images/badge-android.png" alt="Get it on Google Play"> 
+    </div>
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<footer class="footerInstagram">
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li>&copy; 2014 Instagram</li>
+  </ul>
+</footer>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  
 </body>
 </html>
