--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+<section id="base">
+<div id="cel">
+  <img src="images/phones.png" alt="Phone images">
+</div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div id="logo">
+    <img src="./images/brand.png" alt="Instagram logo">
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div id="login">
+    <img src="./images/home.png" alt="home" > <b>Log in</b>
+</div>
 
-  Oh yeah, did we mention it's free?
+<div id="info">
+  
+  <h2>Capture and Share the World's Moments</h2><br>
 
-  Download on the App Store
-  Get it on Google Play
+    <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br><br>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
 
-  &copy; 2014 Instagram
+  Oh yeah, did we mention it's free?<br><br></p>
+
+  <div id="infoimg">
+    <img src="./images/badge-iphone.png" alt ="iPhone"> 
+    <img src="./images/badge-android.png" alt="Google Play">
+  </div> 
+</div>
+
+</section>
+
+<footer>
+   <ul>   
+    <li><b>About Us</b></li>
+    <li><b>Support</b></li>
+    <li><b>Blog</b></li>
+    <li><b>Press</b></li>
+    <li><b>API</b></li>
+    <li><b>Jobs</b></li>
+    <li><b>Privacy</b></li>
+    <li><b>Terms</b></li>
+    <li id= "final">&copy; 2014 Instagram</li>
+  </ul>
+
+  
+</footer>
+
 </body>
 </html>
