--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
+
 <head>
+    <link href="css/main.css" rel="stylesheet" type="text/css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+ <section>
+  <div class= 'titulo'>
+  <img src= "images/brand.png">
+  </div>
+<div class= 'bot'>
+  <button> <img src="images/home.png"> Log in </button>
+</div>
+</section>
+<section>
+  <div class= 'telefono'>
+  <img src="images/phones.png">
+</div>
+<div class= 'parrafo'>  
+<h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+ <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+<br>
   Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
+  </p>
+<br>
+  <img src ="images/badge-iphone.png">
+ <img src ="images/badge-android.png">
+ </div>
+</section>
+<div class= 'abajo'>
   About Us
   Support
   Blog
@@ -25,7 +41,10 @@
   Jobs
   Privacy
   Terms
-
+</div>
+<div class= 'copy'>
   &copy; 2014 Instagram
+</div>
+  </footer>
 </body>
 </html>
