Ejercicio terminado de clone Instagram

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <section>
+    <div class="backblue"></div>
+  </section>
 
-  Capture and Share the World's Moments
+  <section class="upper">
+    <section class="phones"><img src="images/phones.png" alt="phones"></section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <section class="contenido">
+      <section class="instagram"><img src="images/brand.png" alt="brand">
+        <div><button><img src="images/home.png" alt="home">Log In</button></div></section>
+      <section class="parrafo">
+        <h1>Capture and Share the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Oh yeah, did we mention it's free?
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Download on the App Store
-  Get it on Google Play
+          Oh yeah, did we mention it's free?</p>
+        <img class="app" src="images/badge-android.png" alt="android">
+        <img class="app" src="images/badge-iphone.png" alt="">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      </section>
+    </section>
 
-  &copy; 2014 Instagram
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+
 </body>
+
 </html>
