--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram test
+  <div id="masterinfo">
+    <div id="containerlft">
+      <div id="phones">
+        <img src="./images/phones.png" alt="phones" />
+      </div>
+    </div>
+    <div id="containerrgt">
+      <div class="logocont">
+        <div id="logo">
+          <img class="insta" src="./images/brand.png" alt="instagramlogotipo" />
+          <div class="login">
+            <button>
+              <img src="images/home.png" alt="home" />
+              <span>Log in</span>
+            </button>
+          </div>
+        </div>
+      </div>
+      <img src="./images/frame.png" alt="info-frame" />
+      <div id="info">
 
-  Capture and Share the World's Moments
+        <h1>Capture and Share the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family. Take a picture or video, choose
+          a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+          Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free?</p>
+        <div id="badges">
+          <img src="./images/badge-iphone.png" atl="Go to Appstore" />
+          <img src="images/badge-android.png" atl="Go to google play" />
+        </div>
+      </div>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <nav>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li id="copyr"> &copy; 2014 Instagram</li>
+      </ul>
+    </nav>
+  </footer>
+  
 </body>
+
 </html>
