--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,29 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div id="arriba">
+    <img id="logo" src="images/brand.png"/>
+    <button><img src ="images/home.png"/> Log in</button>
+  </div>
 
-  Capture and Share the World's Moments
+  <div>
+    <img id="phones" src="images/phones.png"/>
+    <div id="square">
+      <img src="images/frame.png"/>
+      <div id="dentro">
+      <h1>Capture and Share<br> the World's Moments</h1>
+      <p>Instagram is a fast, beautiful and fun way to share your life <br>
+          with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look<br>
+        and feel, then post to Instagram &mdash; it's that easy. You can<br>
+        even share to Facebook, Twitter, Tumblr and more. It's a<br>
+        new way to see the world.<br></p>
+     <p> Oh yeah, did we mention it's free?</p>
+      <a href="#" class="bigbutton"><img src="images/badge-iphone.png"/></a>
+      <a href="#" class="bigbutton"><img src="images/badge-android.png"/></a>
+      </div>
+    </div>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div>
+    <ul class="footer">
+      <li><a  href="#">ABOUT US</a></li>
+      <li><a  href="#">SUPPORT</a></li>
+      <li><a  href="#">BLOG</a></li>
+      <li><a  href="#">PRESS</a></li>
+      <li><a  href="#">API</a></li>
+      <li><a  href="#">JOBS</a></li>
+      <li><a  href="#">PRIVACY</a></li>
+      <li><a  href="#">TERMS</a></li>
+      <li id ="copyright">&copy; 2014 Instagram</li>
+    </ul>
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
   &copy; 2014 Instagram
 </body>
