--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="grandparent">
+<div class="top-back">
+  <div class = "headline">
+    <img src="./images/brand.png" id="img-one"/>
+    <div class="sub-bar">
+      <img src="././images/home.png"/>
+      <p><strong>Login</strong></p>
+    </div>
+</div>
+</div>
+  <div class="phone-img">
+      <img src="././images/phones.png"/>
+  </div>
+  <section class="info-back">
+    <div class="text-box">
+       
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <h2>Capture and Share <br>
+    the World's Moments</h2>
+
+  <p>
+  Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br>
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <br>
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free?</p>
+  
+    <div class="imgs-div">
+      <div class="left-img">
+        <img src="./images/badge-android.png"/>
+      </div>
+      <div class="right-img">
+        <img src="./images/badge-iphone.png"/>
+      </div>
+    </div>
+  </div>
+</section>
 
-  Download on the App Store
-  Get it on Google Play
+  <div class="foot-bar">
+    <b>About Us</b>
+    <b>Support</b>
+    <b>Blog</b>
+    <b>Press</b>
+    <b>API</b>
+    <b>Jobs</b>
+    <b>Privacy</b>
+    <b>Terms</b>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+   <span>&copy; 2014 Instagram</span>
+  </div>
 </body>
 </html>
