--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css">
+
 </head>
+
+<header>
+
+</header>
 <body>
-  Instagram
+<div id=phones>
+  <img src = "../starter-code/images/phones.png" id = "phones">
+</div>
 
-  Capture and Share the World's Moments
+<section = paragraph>
+  <img src = "../starter-code/images/brand.png" id = "brand">
+  <h1>Capture and Share the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free?<p>
 
-  Download on the App Store
-  Get it on Google Play
+      <img src = "../starter-code/images/badge-android.png" id="android">
+      <img src = "../starter-code/images/badge-iphone.png" id="apple">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    </section>
 
-  &copy; 2014 Instagram
+
+ 
+
 </body>
+
+<footer>
+    <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    </ul>
+  </footer>
 </html>
