--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,6 +4,7 @@
   <title>Instagram</title>
 </head>
 <body>
+  <div>
   Instagram
 
   Capture and Share the World's Moments
@@ -16,7 +17,7 @@
 
   Download on the App Store
   Get it on Google Play
-
+</div>
   About Us
   Support
   Blog
