--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,31 +2,70 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  <div>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="main-container">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="teleph-container">
+      <img src="images/phones.png">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="Inst-container">
 
-  Oh yeah, did we mention it's free?
+      <div class="title">
 
-  Download on the App Store
-  Get it on Google Play
+        <div class="logo">
+          <img src="images/brand.png">
+          
+        </div>
+
+        <div class="log-in">
+          <img src="images/home.png">
+          <p>Log in</p>
+        </div>
+      </div>
+
+      <div class="text-container">
+
+        <h3>Capture and Share the World's Moments</h3>
+
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+
+      <div class="buttons">
+        <img src="images/badge-iphone.png">
+        <img src="images/badge-android.png">
+  
+      </div>
+  </div>
 </div>
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<div class="clearfix"></div>
+<footer>
 
+  <div class="links">
+    <ul>
+      <li><a>About Us</a></li>
+      <li><a>Support</a></li>
+      <li><a>Blog</a></li>
+      <li><a>Press</a></li>
+      <li><a>API</a></li>
+      <li><a>Jobs</a></li>
+      <li><a>Privacy</a></li>
+      <li><a>Terms</a></li>
+    </ul>
+  </div>
+
+  <div class="copy">
   &copy; 2014 Instagram
+  </div>
+
+</footer>
 </body>
 </html>
