Exercise 2 - html/css - clone

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -18,8 +18,7 @@
     <div class="container-row-right"> 
       <div class="container-icons">
         <img id="insta-icon" src="images/brand.png">
-        <span class="button-login">
-          <span class="button-icon"><img src="images/home.png"></span> Log in</span>
+        <span class="button-login"><span class="button-icon"><img src="images/home.png"></span> Log in</span>
       </div>
       <div class="container-text">
         <h2>Capture and Share <br>the World's Moments</h2>
